# CInform_old

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BaseLibrary.vcxproj  BaseLibrary.vcxproj.filters  BlockLibrary.vcxproj  BlockLibrary.vcxproj.filters  CInform.cbp  CInform.sln  CInformCompiler.vcxproj  CInformCompiler.vcxproj.filters  CInformInterpreter.vcxproj  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  ParseLibrary.vcxproj  ParseLibrary.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  actual.code-workspace  autoTaggerSerialize.cpp  bytecode.txt  cmake_install.cmake  debug.txt  encode.py  files4.bat  files_2.bat  files_2.txt  link.bat  log.txt
AppMatch/: AppMatch.sln  CInform.sln  CodeMap1.dgml  bytecode.txt  grammar.txt
AppMatch/AppMatch/: AppMatch.cpp  AppMatch.vcxproj  AppMatch.vcxproj.filters  AssertationDefaultValue.cpp  AssertationEngine.cpp  AssertationSecondary.cpp  AssertationVerbRelation.cpp  AssertionValues.cpp  AssertionsKinds.txt  BaseTest.h  BaseTest.hpp  BlockInstance.cpp  BlockInstance.h  BlockInstance.hpp  BlockInterpreter.cpp  BlockInterpreter.h  BlockInterpreter.hpp  BlockTypeEnum.hpp  BlockisSame.cpp  CAssertionDefinition.h  CBase.cpp  CBase.h  CBase.hpp  CBlockAction.h  CBlockAction.hpp  CBlockBoolean.h  CBlockBoolean.hpp  CBlockCommand.cpp  CBlockCommand.h  CBlockCommand.hpp  CBlockComposition.hpp  CBlockCompostion.cpp  CBlockCompostion.hpp  CBlockControlFlux.hpp  CBlockDecideIf.h  CBlockDecideIf.hpp  CBlockDumpValues.cpp  CBlockDumpValues.h  CBlockDumpValues.hpp  CBlockInterpreterDecideBody.cpp  (+148 more)
AppMatch/AppMatch/VM/: CProperties.h  CValueDefinitions.h  ConstDefinitions.h
AppMatch/AppMatch/data/en/: convert.py  noums.ixx  verb.ixx  verb_n.ixx
AppMatch/AppMatch/include/cereal/: access.hpp
AppMatch/BlockModule/: BlockModule.vcxproj  BlockModule.vcxproj.filters  ReadMe.txt
AppMatch/CInformCompiler/: CInformCompiler.cpp  CInformCompiler.vcxproj  CInformCompiler.vcxproj.filters  stdafx.cpp
AppMatch/InterpreterModule/: InterpreterModule.vcxproj  InterpreterModule.vcxproj.filters  ReadMe.txt  RuntimeErrors.cpp
AppMatch/ModelosDeSintaxe/: phases.txt  relations.txt
AppMatch/ParseModule/: ParseModule.vcxproj  ParseModule.vcxproj.filters  ReadMe.txt
AppMatch/StoreData/: StoreBlock.cpp  StoreCBlock.hpp  StoreData.vcxproj  StoreData.vcxproj.filters
AppMatch/cereal/: access.hpp  cereal.hpp
AppMatch/cereal/details/: polymorphic_impl.hpp  static_object.hpp
AppMatch/include/: BaseTest.hpp  BlockInstance.hpp  BlockInterpreter.hpp  BlockTypeEnum.hpp  CBlockAction.hpp  CBlockCommand.hpp  CBlockComposition.hpp  CBlockCompostion.hpp  CBlockControlFlux.hpp  CBlockDecideIf.hpp  CBlockDumpValues.hpp  CBlockMatch.hpp  CBlockNumber.hpp  CBlockScope.hpp  CDataMananger.hpp  CInterpreterRuntimeExecute.hpp  CblockAssertion.hpp  GrammarParser.h  LanguageDepend.h  dynamicCast.hpp  save_ctx.hpp  serialRegister.hpp  sharedCast.hpp  stdafx.h  verb_en.hpp
AppMatch/include/base/: CBase.hpp  EqualsResult.hpp
AppMatch/include/interpreter/: CBlockInterpreterRuntime.hpp  QueryStack.hpp
AppMatch/include/match/: CMatch.hpp  CMatchCombinatoria.hpp  CMatchListValid.hpp
AppMatch/include/parser/: Parser.hpp  ParserDictionary.h  ParserPlural.hpp  Predicates.hpp  PredicatesEn.hpp
AppMatch/src/Block/: BlockInstance.cpp  BlockInterpreter.cpp  BlockTypeEnum.cpp  BlockisSame.cpp  CBlockAction.cpp  CBlockCommand.cpp  CBlockDumpValues.cpp  CBlockNumber.cpp  save_ctx.cpp  sharedCast.cpp  store_tp.cpp
AppMatch/src/base/: CBase.cpp  CMatch.cpp  CMatchCombinatoria.cpp  CMatchListValid.cpp
AppMatch/src/compiler/: CInformCompiler.cpp
AppMatch/src/interpreter/: AssertationDefaultValue.cpp  AssertationEngine.cpp  AssertationVerbRelation.cpp  AssertionValues.cpp  CBlockInterpreterBase.cpp  CBlockInterpreterBase.h  CBlockInterpreterDecideBody.cpp  CBlockInterpreter_Verb_En.cpp  CInterpreterEvaluate.cpp  CInterpreterKindTree.cpp  CInterpreterRelation.cpp  CInterpreterResolve.cpp  CInterpreterResolveMatchSeletor.cpp  CInterpreterRuntimeExecute.cpp  CResultMatch.cpp  CVariableGlobals.cpp  CreateInstanceInterpreter.cpp  InterpExecute.cpp  InterpFunctionsCallcpp.cpp  InterpreterMatch.cpp  InterpreterQuery.cpp  Interpreter_Adapt_Text.cpp  PhaseResult_init.cpp  PhaseResult_init.h  QueryItem.cpp  interpreterRegex.cpp
AppMatch/src/interpreterMain/: CInformInterpreter.cpp
AppMatch/src/parser/: CParseAux.cpp  ParseAssertationSecondary.cpp  ParseDictionary.cpp  ParseListAux.cpp  ParseRelation.cpp  ParseRelationWhen.cpp  ParseRules.cpp  ParseVerbs.cpp  Parse_PhraseDeclare.cpp  Parse_TokensGroup.cpp  Parse_verbArray_en.cpp  Parser.cpp  ParserDynamicDispatch.cpp  ParserPlural_table.cpp  ParserSelectorFunctional.cpp  ParserStmt.cpp  ParserTextEntry.cpp  Parser_A.cpp  Parser_ActionControl.cpp  Parser_ControlFlux.cpp  Parser_Decide.cpp  Parser_Plurals_En.cpp  Parser_RegisterVerb.cpp  Parser_VerbTable_en.cpp  Parser_expression_match.cpp  StaticDispatchFunctions.cpp
AppMatch/src/parser_Eng/: LanguageEn.cpp  Parser_Plurals_En.cpp  Predicates.cpp
Doc/: Action.md  Adjetives.md  LanguageDefinition.md  List.md  Predicades.md  Relations.md  Unicode.MD  Unification.md  rules.md  unit_test_1.txt  unit_test_action.txt  unit_test_adjetivos.txt  unit_test_input.txt  unit_test_kind.txt  unit_test_kind_all.txt  unit_test_regex.txt  unit_test_relation.txt  unit_test_relation_3.txt  unit_test_rulebook.txt  unit_text_decide.txt  unit_text_values.txt  worldModel.txt
Doc/Internals/: Phases.md  Syntax.md  bytecodeFormat.md
Doc/Language/: Portuguese.md
Doc/Units/: articles.txt  kind.txt  relation_1.txt  relation_2.txt
MeshViewer/: MeshViewer.sln
MeshViewer/MeshViewer/: MeshViewer.cpp  MeshViewer.rc  MeshViewer.vcxproj  MeshViewer.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
appMatchOSX/appMatchOSX/: main.cpp
appMatchOSX/appMatchOSX.xcodeproj/: project.pbxproj
appMatchOSX/appMatchOSX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
emcc/: files.txt
(+3 files in other folders)
